fixed some spacing in login and register

--- a/inf2002-project/src/Auth/Login.css
+++ b/inf2002-project/src/Auth/Login.css
@@ -5,7 +5,8 @@
   }
   
   .homepage-header {
-    margin-bottom: 20px;
+    margin-top:10px;
+    margin-bottom: 10px;
   }
   
   .homepage-logo {
