--- a/inf2002-project/src/Auth/Signup.css
+++ b/inf2002-project/src/Auth/Signup.css
@@ -22,3 +22,7 @@
     margin-top: 10px;
     color: green;
   }
+
+input{
+  margin-bottom: 15px;
+}
