--- a/inf2002-project/src/Homepage/Homepage.css
+++ b/inf2002-project/src/Homepage/Homepage.css
@@ -7,7 +7,7 @@
   }
   
   .homepage-header {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
   
   .homepage-header h1 {
